shell: Fix bad rendering of search results

Don't use pango_cairo_layout_path(), which doesn't do any
hinting whatsoever, use gtk_render_layout() from GTK+ instead,
as the text cell renderer already does.

With help from Matthias Clasen <mclasen@redhat.com>

https://bugzilla.gnome.org/show_bug.cgi?id=652709